--- a/SvelteKit-Frontend/package.json
+++ b/SvelteKit-Frontend/package.json
@@ -27,6 +27,7 @@
         "vite": "^5.0.3"
     },
     "dependencies": {
+        "dotenv": "^16.4.5",
         "lucide-svelte": "^0.378.0"
     }
 }
